# rp2350_hacking_challenge

./: CMakeLists.txt  README.md  ec_private_key.pem  ec_public_key.pem  enable_secureboot.sh  keygen.sh  lock_chip.sh  main.c  otp.json  read_otp_secret.sh  write_otp_secret.sh
